:rocket: Change launch to s3

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy ByS Admin
 on:
   push:
-    branches: [ develop ]
+    branches: [ feature/login-base ]
   pull_request:
     branches: [ develop ]
 jobs:
