--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "eslint": "8.28.0",
