--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,13 @@
 {
   "semi": false,
-  "trailingComma": "es5",
   "singleQuote": true,
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 80,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": false,
+  "bracketSameLine": true,
+  "arrowParens": "avoid"
 }
