--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
-    "eslint": "8.28.0",
+    "eslint": "^8.0.1",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "typescript": "*"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.0"
   }
 }
