--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env next dev",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
@@ -22,7 +22,8 @@
     "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "*"
+    "typescript": "*",
+    "cross-env": "7.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
