--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bysadmin",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "cross-env next dev",
@@ -15,15 +15,15 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
-    "classnames": "^2.3.2",
+    "cross-env": "7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "13.0.5",
+    "formik": "^2.2.9",
     "next": "13.0.5",
     "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "*",
-    "cross-env": "7.0.3"
+    "typescript": "*"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
