--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "typescript": "*"
   },
   "devDependencies": {
