--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
+    "@mui/x-data-grid": "^5.17.14",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
@@ -24,15 +29,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
-    "typescript": "^4.9.4",
-    "@mui/material": "^5.10.17",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/x-data-grid": "^5.17.14",
-    "@emotion/styled": "^11.10.5",
-    "@emotion/react": "^11.10.5"
+    "styled-components": "^5.3.6",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -40,5 +42,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
