--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint-config-prettier": "^8.5.0",
