--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-base64": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
