--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "cross-env next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint \"**/*.+(js|jsx|ts|tsx)\"",
+    "eslint:fix": "eslint --fix \"**/*.+(js|jsx|ts|tsx)\"",
+    "prettier": "prettier --check \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "prettier:fix": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -31,7 +37,8 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "prop-types": "^15.7.2",
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
@@ -43,7 +50,24 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "11.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2"
+  },
+  "lint-staged": {
+    "./*/**/*.{js,jsx,ts,tsx}": [
+      "npm run prettier:fix",
+      "npm run eslint:fix"
+    ],
+    "*.{json,md}": [
+      "npm run prettier:fix"
+    ]
   },
   "resolutions": {
     "styled-components": "^5"
