--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "cross-env": "7.0.3",
-    "eslint": "^8.0.1",
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
     "next": "13.0.5",
@@ -38,7 +37,7 @@
     "react-hot-toast": "^2.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
@@ -50,15 +49,15 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.8.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "11.1.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^11.1.2"
+    "prettier": "^2.8.1",
+    "eslint": "^8.0.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.0.7",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0"
   },
   "lint-staged": {
     "./*/**/*.{js,jsx,ts,tsx}": [
