--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,70 @@
 {
-    "env": {
-      "browser": true,
-      "es2021": true,
-      "node": true
-    },
-    "extends": ["plugin:react/recommended", "plugin:@next/next/recommended", "airbnb", "prettier"],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb-base",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript",
+    "prettier"
+  ],
+  "settings": {
+    "react": {"version": "detect"},
+    "import/resolver": {
+      "typescript": {
+        "project": "./tsconfig.json"
       },
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "plugins": ["react", "prettier"],
-    "rules": {
-      "prettier/prettier": "error",
-      "react/react-in-jsx-scope": "off",
-      "react/jsx-props-no-spreading": "off",
-      "react/forbid-prop-types": "off",
-      // defaultProps rule to be deprecated on function components
-      // https://github.com/reactjs/rfcs/pull/107
-      "react/require-default-props": [
-        "error",
-        {
-          "ignoreFunctionalComponents": true
-        }
-      ]
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
-  }
+  },
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react", "react-hooks", "jest", "prettier"],
+  "rules": {
+    "no-use-before-define": ["error", {"variables": false}],
+    "import/prefer-default-export": "off",
+    "prettier/prettier": "error",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "import/extensions": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error",
+    "no-console": "off",
+    "no-underscore-dangle": ["error", {"allow": ["__meta__"]}],
+    "no-restricted-properties": "off",
+    "no-prototype-builtins": "off",
+    "no-restricted-exports": "off",
+    "no-plusplus": ["error", {"allowForLoopAfterthoughts": true}],
+    // note you must disable the base rule as it can report incorrect errors
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"]
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
+}
