--- a/package.json
+++ b/package.json
@@ -6,13 +6,34 @@
     "dev": "cross-env next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
+    "lint-old": "next lint",
     "eslint": "eslint \"**/*.+(js|jsx|ts|tsx)\"",
     "eslint:fix": "eslint --fix \"**/*.+(js|jsx|ts|tsx)\"",
-    "prettier": "prettier --check \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "prettier-old": "prettier --check \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
     "prettier:fix": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
-    "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "change": "here",
+    "prettier": "prettier -w \"**/*.{ts,tsx}\"",
+    "lint:css": "stylelint 'src/**/*.tsx'",
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:prettier": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "lint-old-2": "node_modules/eslint/bin/eslint.js --fix '*/**/*.{ts,tsx}'",
+    "fix:eslint": "eslint --fix \"**/*.{ts,tsx}\"",
+    "fix:prettier": "prettier --write \"**/*.{ts,tsx}\"",
+    "fix": "npm run fix:eslint && npm run fix:prettier",
+    "test": "jest --config ./jest.config.js",
+    "test:watch": "jest --config ./jest.config.js --watch --notify",
+    "test:cov": "jest --coverage --runInBand --silent",
+    "test-with-coverage": "node_modules/.bin/jest --config ./jest.config.js --coverage=true --maxWorkers=2 --silent",
+    "precommit": "lint-staged",
+    "change2": "here2",
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "fix-lint": "eslint . --ext ts --ext tsx --ext js --fix",
+    "format": "prettier --write .",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -27,37 +48,39 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "cross-env": "7.0.3",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "13.0.7",
     "formik": "^2.2.9",
     "next": "13.0.5",
     "next-base64": "^1.1.0",
+    "prop-types": "^15.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.9.4",
-    "prop-types": "^15.7.2"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "eslint-plugin-jest": "^27.1.7",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.8.1",
-    "eslint": "^8.0.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "13.0.7",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.2",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1"
   },
   "lint-staged": {
     "./*/**/*.{js,jsx,ts,tsx}": [
