--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,13 +1,13 @@
 {
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 80,
+  "printWidth": 200,
   "quoteProps": "as-needed",
   "jsxSingleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
   "bracketSameLine": true,
   "arrowParens": "avoid"
 }
