--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "next": "13.0.5",
     "next-base64": "^1.1.0",
     "prop-types": "^15.7.2",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
+    "react-quill": "^2.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
   },
