--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "7.0.3",
     "eslint-config-next": "13.0.7",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.0.5",
     "next-base64": "^1.1.0",
     "prop-types": "^15.7.2",
@@ -50,6 +51,7 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
