--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           touch .env
           echo REACT_APP_BASE_URL=${{ secrets.REACT_APP_BASE_URL }} >> .env
-          echo NEXT_PUBLIC_CLARITY_KEY=${{ secrets.NEXT_PUBLIC_CLARITY_KEY }} >> .env
+          echo REACT_APP_CLARITY_KEY=${{ secrets.REACT_APP_CLARITY_KEY }} >> .env
 
       - name: Build Static Website
         run: yarn build
