--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "fix-lint": "eslint . --ext ts --ext tsx --ext js --fix",
     "format": "prettier --write .",
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "coverage2": "jest --coverage",
+    "coverage": "jest --coverage --runInBand --silent"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -51,6 +54,9 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -70,6 +76,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.2",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.4"
   },
