:test_tube: Configuración Final Testing

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
     "prepare": "husky install",
     "test": "jest",
-    "coverage2": "jest --coverage",
-    "coverage": "jest --coverage --runInBand --silent"
+    "coverage": "jest --coverage --runInBand --silent",
+    "build-debug": "next build --debug"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -56,9 +56,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/styled-components": "^5.1.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-plugin-styled-components": "^2.0.7",
