--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.4.2",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "cross-env": "7.0.3",
+    "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.7",
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.2.4",
+    "next": "^13.3.0",
     "next-base64": "^1.1.0",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
@@ -50,6 +52,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.0",
     "react-quill": "^2.0.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
   },
