--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.3.0",
+    "next-auth": "^4.22.1",
     "next-base64": "^1.1.0",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
